[package]
name = "zyne"
description = "A Web Framework for Blacksmiths"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://zyne.com.br/"
documentation = "https://docs.rs/zyne"
repository = "https://github.com/zynedev/zyne"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
